Amélioration page commune.html

--- a/commune.html
+++ b/commune.html
@@ -227,7 +227,7 @@
                         <div class="card">
                             <div class="front">
                                 <div class="front-content">
-                                    <div class="img"><img src="image/personne/Bernadette-Auffret.jpg" alt="img" draggable="false"></div>
+                                    <div class="img"><img src="image/personne/Mme_AUFFRET.png" alt="img" draggable="false"></div>
                                     <h2>Mme AUFFRET </h2>
                                     <span>Maire de Plougonven</span>
                                 </div>
@@ -244,7 +244,7 @@
                         <div class="card">
                             <div class="front">
                                 <div class="front-content">
-                                    <div class="img"><img src="image/personne/Jean-Laurent-Hamon.jpg" alt="img" draggable="false"></div>
+                                    <div class="img"><img src="image/personne/M_HAMON.png" alt="img" draggable="false"></div>
                                     <h2>M. HAMON</h2>
                                     <span>Maire Adjoint</span>
                                 </div>
@@ -300,7 +300,7 @@
                             <div class="front">
                                 <div class="front-content">
                                     <div class="img">
-                                        <img src="image/personne/inconuMan.jpeg" alt="img" draggable="false">
+                                        <img src="image/personne/Yolande_de_Ternay.png" alt="img" draggable="false">
                                     </div>
                                     <h2>Mme DE TERNAY</h2>
                                     <span>Maire Adjoint</span>
@@ -319,7 +319,7 @@
                             <div class="front">
                                 <div class="front-content">
                                     <div class="img">
-                                        <img src="image/personne/MmeMartineCARN.png" alt="img" draggable="false">
+                                        <img src="image/personne/Mme_CARN.png" alt="img" draggable="false">
                                     </div>
                                     <h2>Mme CARN</h2>
                                     <span>Conseillerère</span>
@@ -339,7 +339,7 @@
                             <div class="front">
                                 <div class="front-content">
                                     <div class="img">
-                                        <img src="image/personne/inconuMan.jpeg" alt="img" draggable="false">
+                                        <img src="image/personne/M_BERTHOU.png" alt="img" draggable="false">
                                     </div>
                                     <h2>M. BERTHOU</h2>
                                     <span>Maire Adjoint</span>
