Amélioration des pages

--- a/index.html
+++ b/index.html
@@ -426,61 +426,37 @@
             <div class="row info">
                 <h5>16/10/2023</h5>
                 <p class="border-left-5  border-danger">À compter de cette date, les déchèteries fermeront à 17h au lieu
-                    de 18h.
-                    L'aire de déchets verts de Kérolzec (à St-Martin-Des-Champs) fermera également tous les jours à 17h.
-                    Le samedi
-                    elle sera ouverte uniquement l'après midi de 13h45 à 17h (fermée le samedi matin).</p>
-                <a id="lireplus1" href="#nogo" onclick="afficherLireLaSuite('lirelasuite1', 'lireplus1')">Lire la
-                    suite...<br></a>
-                <p id="lirelasuite1" style="display: none;"> Attention, afin de permettre le vidage des remorques et le
-                    nettoyage
-                    des sites, les déchèteries ferment leurs portes au public 5 minutes avant les horaires indiqués.<a
-                            href="javascript:masquerLireLaSuite('lirelasuite1', 'lireplus1')"><br>
-                        <ion-icon name="remove"></ion-icon>
+                    de 18h. L'aire de déchets verts de Kérolzec (à St-Martin-Des-Champs) fermera également tous les jours à 17h.
+                    Le samedi elle sera ouverte uniquement l'après midi de 13h45 à 17h (fermée le samedi matin). <br>
+                    <a id="lireplus1" href="#nogo" onclick="afficherLireLaSuite('lirelasuite1', 'lireplus1')">Lire la suite...<br></a></p>
 
-                    </a></p>
-                <a class="card-link" target="_blank"
-                   href="https://www.morlaix-communaute.bzh/var/intranet/storage/images/morlaix-communaute/reduire-trier-les-dechets/actualites/les-decheteries-passent-a-l-heure-d-hiver-ce-lundi-16-octobre/4325589-3-fre-FR/Les-decheteries-passent-a-l-heure-d-hiver-ce-lundi-16-octobre_article_main.png">Horaires
-                    des déchèteries</a>
+                <p id="lirelasuite1" style="display: none;"> Attention, afin de permettre le vidage des remorques et le
+                nettoyage des sites, les déchèteries ferment leurs portes au public 5 minutes avant les horaires indiqués.
+                <a href="javascript:masquerLireLaSuite('lirelasuite1', 'lireplus1')"><br><ion-icon name="remove"></ion-icon></a></p>
+                <a class="card-link" target="_blank" href="https://www.morlaix-communaute.bzh/var/intranet/storage/images/morlaix-communaute/reduire-trier-les-dechets/actualites/les-decheteries-passent-a-l-heure-d-hiver-ce-lundi-16-octobre/4325589-3-fre-FR/Les-decheteries-passent-a-l-heure-d-hiver-ce-lundi-16-octobre_article_main.png">Horaires des déchèteries</a>
             </div>
 
             <div class="row info">
                 <h5>13/10/2023</h5>
                 <p class="border-left  border-danger">Le tout nouveau programme des animations nature et biodiversité
-                    est sorti. Des
-                    landes de Guernélohet à la Manufacture des tabacs de Morlaix, partez à la découverte de la faune et
-                    la flore
-                    d'exception du territoire.</p>
-                <a id="lireplus2" href="#nogo" onclick="afficherLireLaSuite('lirelasuite2', 'lireplus2')">Lire la
-                    suite...</a>
+                    est sorti. Des landes de Guernélohet à la Manufacture des tabacs de Morlaix, partez à la découverte de la faune et
+                    la flore d'exception du territoire. <br> <a id="lireplus2" href="#nogo" onclick="afficherLireLaSuite('lirelasuite2', 'lireplus2')">Lire la suite...</a></p>
+
                 <p id="lirelasuite2" style="display: none;">Parmi les 9 animations proposées dans le cadre du programme
-                    Trame verte
-                    et bleue porté par Morlaix Communauté, vous trouverez forcément chaussure à votre pied !<a
-                            href="javascript:masquerLireLaSuite('lirelasuite2', 'lireplus2')"><u><br>
-                        <ion-icon name="remove"></ion-icon>
-                    </u></a></p>
-                <a class="card-link" target="_blank"
-                   href="https://www.morlaix-communaute.bzh/community/showPDF/372364/4072576/version/1/file/Trame+verte+et+bleue-7.pdf">Animations
-                    Nature & Biodiversité</a>
+                Trame verte et bleue porté par Morlaix Communauté, vous trouverez forcément chaussure à votre pied !
+                <a href="javascript:masquerLireLaSuite('lirelasuite2', 'lireplus2')"><u><br><ion-icon name="remove"></ion-icon></u></a></p>
+                <a class="card-link" target="_blank" href="https://www.morlaix-communaute.bzh/community/showPDF/372364/4072576/version/1/file/Trame+verte+et+bleue-7.pdf">Animations Nature & Biodiversité</a>
             </div>
+
             <div class="row info">
                 <h5>1/09/2023</h5>
                 <p class="border-left  border-danger">Vous avez un projet de création, de reprise, de développement
                     d’entreprise ? Vous êtes à la recherche d’un bureau, d’un local commercial ou artisanal, d’un
-                    terrain à bâtir ?</p>
-                <a id="lireplus3" href="#nogo" onclick="afficherLireLaSuite('lirelasuite3', 'lireplus3')">Lire la
-                    suite...</a>
+                    terrain à bâtir ? <br> <a id="lireplus3" href="#nogo" onclick="afficherLireLaSuite('lirelasuite3', 'lireplus3')">Lire la suite...</a></p>
 
-                <p id="lirelasuite3" style="display: none;">Parcourez notre nouveau livret des aides et dispositifs possibles et prenez contact
-                    avec le pôle
-                    économie !<a
-                            href="javascript:masquerLireLaSuite('lirelasuite3', 'lireplus3')"><u><br>
-                        <ion-icon name="remove"></ion-icon>
-                    </u></a></p>
-                <br>
-                <a class="card-link" target="_blank"
-                   href="https://www.morlaix-communaute.bzh/community/showPDF/347503/3780443/version/1/file/23020-plaquette-economique-12pages-WEB-100523.pdf">Votre
-                    projet d’implantation à Morlaix Communauté</a>
+                <p id="lirelasuite3" style="display: none;">Parcourez notre nouveau livret des aides et dispositifs possibles et prenez contact avec le pôle économie !
+                <a href="javascript:masquerLireLaSuite('lirelasuite3', 'lireplus3')"><u><br><ion-icon name="remove"></ion-icon></u></a></p>
+                <a class="card-link" target="_blank" href="https://www.morlaix-communaute.bzh/community/showPDF/347503/3780443/version/1/file/23020-plaquette-economique-12pages-WEB-100523.pdf">Votre projet d’implantation à Morlaix Communauté</a>
             </div>
 
 
