Amélioration des pages

--- a/index.html
+++ b/index.html
@@ -148,29 +148,31 @@
         <div class="col-sm-6">
             <div id="carouselExample" class="carousel slide">
                 <div class="carousel-inner">
+
                     <div class="carousel-item active">
-                        <img src="image/actualites/animations_nature_biodiversité.png" class="d-block w-100"
-                             alt="Affiche animation biodiversité">
+                        <img src="image/actualites/animations_nature_biodiversité.png" class="d-block w-100" alt="Affiche animation biodiversité">
                     </div>
+
                     <div class="carousel-item">
-                        <img src="image/actualites/festival_panoramas.png" class="d-block w-100"
-                             alt="festival panorama">
+                        <img src="image/actualites/festival_panoramas.png" class="d-block w-100" alt="festival panorama">
                     </div>
+
                     <div class="carousel-item">
-                        <img src="image/actualites/journee_patrimoine.png" class="d-block w-100"
-                             alt="journée du patrimoine">
+                        <img src="image/actualites/journee_patrimoine.png" class="d-block w-100" alt="journée du patrimoine">
                     </div>
+
                     <div class="carousel-item">
-                        <img src="image/actualites/les_lignes_de_la_plage.png" class="d-block w-100"
-                             alt="les lignes de plage">
+                        <img src="image/actualites/les_lignes_de_la_plage.png" class="d-block w-100" alt="les lignes de plage">
                     </div>
+
                     <div class="carousel-item">
-                        <img src="image/actualites/les_rues_en_scenes.png" class="d-block w-100"
-                             alt="les reus en scenes">
+                        <img src="image/actualites/les_rues_en_scenes.png" class="d-block w-100" alt="les reus en scenes">
                     </div>
+
                     <div class="carousel-item">
                         <img src="image/actualites/MX_art_tour.png" class="d-block w-100" alt="art tours">
                     </div>
+
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
                         data-bs-slide="prev">
