--- a/Ltouristique.html
+++ b/Ltouristique.html
@@ -34,16 +34,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav text-center">
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#">La Communauté</a>
+                        <a class="nav-link text-white" href="Page_en_construction.html">La Communauté</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Domaines d'actions</a>
+                        <a class="nav-link text-white" href="Page_en_construction.html">Domaines d'actions</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Les grands projets</a>
+                        <a class="nav-link text-white" href="Page_en_construction.html">Les grands projets</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Les équipements</a>
+                        <a class="nav-link text-white" href="Page_en_construction.html">Les équipements</a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
@@ -77,7 +77,7 @@
 
 <div class="container mt-4 space-after ">
     <!-- ne pas oublier de mettre les lien sur les cards ici !!-->
-    <div class="row">
+   <!-- <div class="row">
         <div class="col-md-2">
             <div class="card-style">
                 <a href="#" class="card-link">
@@ -126,7 +126,58 @@
                 </a>
             </div>
         </div>
+    </div>-->
+    <div class="row">
+        <div class="col-md-6 col-lg-4 col-xl-2">
+            <div class="card-style">
+                <a href="Page_en_construction.html" class="card-link">
+                    <img src="image/icones/temple.png" class="logo-card" alt="Logo Batiment Publique">
+                    <p class="font-weight-bold">COMMANDE PUBLIQUE</p>
+                </a>
+            </div>
+        </div>
+        <div class="col-md-6 col-lg-4 col-xl-2">
+            <div class="card-style">
+                <a href="Page_en_construction.html" class="card-link">
+                    <img src="image/icones/mallette.png" class="logo-card" alt="Logo  Valise">
+                    <p class="font-weight-bold">EMPLOI</p>
+                </a>
+            </div>
+        </div>
+        <div class="col-md-6 col-lg-4 col-xl-2">
+            <div class="card-style">
+                <a href="Service en ligne.html" class="card-link" target="_blank">
+                    <img src="image/icones/service.png" class="logo-card" alt="Logo Associations">
+                    <p class="font-weight-bold">SERVICES EN LIGNE</p>
+                </a>
+            </div>
+        </div>
+        <div class="col-md-6 col-lg-4 col-xl-2">
+            <div class="card-style">
+                <a href="Page_en_construction.html" class="card-link">
+                    <img src="image/icones/Bus.png" class="logo-card" alt="Logo Mobilité">
+                    <p class="font-weight-bold">MOBILITÉS ET STATIONNEMENTS</p>
+                </a>
+            </div>
+        </div>
+        <div class="col-md-6 col-lg-4 col-xl-2">
+            <div class="card-style">
+                <a href="Page_en_construction.html" class="card-link">
+                    <img src="image/icones/Travaux.png" class="logo-card" alt="Logo Travaux">
+                    <p class="font-weight-bold">TRAVAUX</p>
+                </a>
+            </div>
+        </div>
+        <div class="col-md-6 col-lg-4 col-xl-2">
+            <div class="card-style">
+                <a href="Ltouristique.html" class="card-link" target="_blank">
+                    <img src="image/icones/carte.png" class="logo-card" alt="Logo Sport">
+                    <p class="font-weight-bold">LIEUX TOURISTIQUES</p>
+                </a>
+            </div>
+        </div>
     </div>
+
 </div>
 <div class="container">
     <p class="ecriture">Sites historiques</p>
