Amélioration page d'acceuil

--- a/Ltouristique.html
+++ b/Ltouristique.html
@@ -282,7 +282,7 @@
     </div>
     <p class="ecriture">Trésors Marins</p>
     <div class="cardtst">
-        <a href="#" class="cardt">
+        <a href="index.html" class="cardt">
             <div class="cardt-background"
                  style="background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS2NB-M2Db61HRYyXFk0wa_n0MkzhKg79fuBg&usqp=CAU)"></div>
             <div class="cardt-content">
