Amélioration page d'acceuil

--- a/Page_en_construction.html
+++ b/Page_en_construction.html
@@ -51,7 +51,7 @@
                  onchange="ouvrirPage()" aria-label="Search">
 
           <input class="btn btn-outline-success bg-white text-black" type="button" id="button"
-                 onclick="ouvrirPage()" value="Chercher">
+                 onclick="ouvrirPage()" value="OK">
 
         </form>
       </div>
