--- a/Ltouristique.html
+++ b/Ltouristique.html
@@ -64,69 +64,9 @@
     <video width="1600" height="1020" controls autoplay="autoplay" muted="" loop="loop">
         <source src="vidéo/MORLAIX_Bretagne.mp4" type=video/mp4>
     </video>
-
-    <h1><span class="ityped"></span></h1>
-    <script type="text/javascript" src="js/app.js"></script>
-    <script type="text/javascript">
-        window.ityped.init(document.querySelector('.ityped'), {
-            strings: ['Explorez Nos Lieux Touristiques'],
-            loop: true
-        })
-    </script>
 </div>
 
 <div class="container mt-4 space-after ">
-    <!-- ne pas oublier de mettre les lien sur les cards ici !!-->
-   <!-- <div class="row">
-        <div class="col-md-2">
-            <div class="card-style">
-                <a href="#" class="card-link">
-                    <img src="image/icones/temple.png" class="logo-card" alt="Logo Batiment Publique">
-                    <p class="font-weight-bold">COMMANDE PUBLIQUE</p>
-                </a>
-            </div>
-        </div>
-        <div class="col-md-2">
-            <div class="card-style">
-                <a href="#" class="card-link">
-                    <img src="image/icones/mallette.png" class="logo-card" alt="Logo  Valise">
-                    <p class="font-weight-bold">EMPLOI</p>
-                </a>
-            </div>
-        </div>
-        <div class="col-md-2">
-            <div class="card-style">
-                <a href="Service en ligne.html" class="card-link" target="_blank">
-                    <img src="image/icones/service.png" class="logo-card" alt="Logo Associations">
-                    <p class="font-weight-bold">SERVICES EN LIGNE</p>
-                </a>
-            </div>
-        </div>
-        <div class="col-md-2">
-            <div class="card-style">
-                <a href="#" class="card-link">
-                    <img src="image/icones/Bus.png" class="logo-card" alt="Logo Mobilité">
-                    <p class="font-weight-bold">MOBILITÉS ET STATONNEMENTS</p>
-                </a>
-            </div>
-        </div>
-        <div class="col-md-2">
-            <div class="card-style">
-                <a href="#" class="card-link">
-                    <img src="image/icones/Travaux.png" class="logo-card" alt="Logo Travaux">
-                    <p class="font-weight-bold">TRAVAUX</p>
-                </a>
-            </div>
-        </div>
-        <div class="col-md-2">
-            <div class="card-style">
-                <a href="Ltouristique.html" class="card-link" target="_blank">
-                    <img src="image/icones/carte.png" class="logo-card" alt="Logo Sport">
-                    <p class="font-weight-bold">LIEUX TOURISTIQUES</p>
-                </a>
-            </div>
-        </div>
-    </div>-->
     <div class="row">
         <div class="col-md-6 col-lg-4 col-xl-2">
             <div class="card-style">
@@ -180,6 +120,7 @@
 
 </div>
 <div class="container">
+    <h3 class="title">Explorez Nos Lieux Touristiques</h3>
     <p class="ecriture">Sites historiques</p>
     <div class="cardtst">
         <!--<a href="#" class="cardt">
@@ -191,19 +132,14 @@
                         <img src="image/icones/619.png">
                     </div>
                 </a>&ndash;&gt;
-
                 <a href="lien-prov.com" class="card-link" target="_blank">
                     <img src="image/icones/619.png" class="logo-card" alt="Logo Batiment Publique">
-
                 </a>
                 <p>Voyage</p>
                 <h3>Japon</h3>
-
-
-
             </div>
-
         </a>-->
+
         <a href="https://fr.wikipedia.org/wiki/Viaduc_de_Morlaix" class="cardt">
             <div class="cardt-background"
                  style="background-image: url(https://files.structurae.net/files/photos/618/morlaix2.jpg)"></div>
