Amélioration page d'acceuil

--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
         </div>
 
         <div class="col-sm-6">
+           <!-- <p class="ecriture-petit-titre"></p>-->
             <div id="carouselExample" class="carousel slide">
                 <div class="carousel-inner">
 
@@ -185,7 +186,7 @@
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
-
+            <p class="ecriture-petit-titre">La carte des communes:</p>
             <div class="mapdiv">
 
                 <svg height="600" version="1.1" width="500" xmlns="http://www.w3.org/2000/svg"
