--- a/commune.html
+++ b/commune.html
@@ -20,10 +20,10 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/Contcart.css"/>
-    <link rel="stylesheet" href="css/carousell.css">
-    <link rel="stylesheet" href="css/carte.css">
-    <link rel="stylesheet" href="css/popup.css">
-    <link rel="stylesheet" href="css/Map.css">
+  <!--  <link rel="stylesheet" href="css/carousell.css">-->
+    <!--<link rel="stylesheet" href="css/carte.css">-->
+    <!--<link rel="stylesheet" href="css/popup.css">-->
+    <!--<link rel="stylesheet" href="css/Map.css">-->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
           integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
           crossorigin=""/>
