--- a/commune.html
+++ b/commune.html
@@ -148,8 +148,7 @@
 
 <div class="row">
     <div class="heading">
-        <h1 data-text="Plougonven">
-            Plougonven</h1>
+        <h3 data-text="Plougonven">Plougonven</h3>
     </div>
 </div>
 
