--- a/commune.html
+++ b/commune.html
@@ -162,27 +162,17 @@
                             <h1>Nos contacts</h1>
                             <div class="contact-items">
                                 <div class="contact-item">
-                                    <a href="tel:02 98 78 64 04">
-                                        <ion-icon name="call"></ion-icon>
-                                        02 98 78 64 04
-                                    </a>
+                                    <a href="tel:02 98 78 64 04"><ion-icon name="call"></ion-icon>02 98 78 64 04</a>
                                 </div>
                                 <div class="contact-item">
-                                    <a href="mailto:mairie-de-plougonven@fr.oleane.com">
-                                        <ion-icon name="mail"></ion-icon>
-                                        mairie-de-plougonven<br>@fr.oleane.com
-                                    </a>
+                                    <a href="mailto:mairie-de-plougonven@fr.oleane.com"><ion-icon name="mail"></ion-icon>mairie-de-plougonven<br>@fr.oleane.com</a>
                                 </div>
 
                                 <div class="contact-item">
-                                    <a href="http://www.plougonven.fr/">
-                                        <ion-icon name="globe"></ion-icon>
-                                        www.plougonven.fr
-                                    </a>
+                                    <a href="http://www.plougonven.fr/" target="_blank"><ion-icon name="globe"></ion-icon>www.plougonven.fr</a>
                                 </div>
                                 <div class="contact-item">
-                                    <a href="http://www.plougonven.fr/">
-                                        <ion-icon name="time-outline"></ion-icon>
+                                    <a href="http://www.plougonven.fr/"><ion-icon name="time-outline"></ion-icon>
                                         <div class="box">
                                             <a class="button1" href="#popup1">Horaires</a>
                                         </div>
