--- a/index.html
+++ b/index.html
@@ -63,6 +63,15 @@
     <video width="1600" height="1020" controls autoplay="autoplay" muted="" loop="loop">
         <source src="vidéo/MORLAIX_Bretagne.mp4" type=video/mp4>
     </video>
+
+    <h1><span class="ityped"></span></h1>
+    <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript">
+        window.ityped.init(document.querySelector('.ityped'), {
+            strings: ['Bienvenue Sur Notre Site Morlaix'],
+            loop: true
+        })
+    </script>
 </div>
 
 <div class="container mt-4 space-after ">
@@ -120,7 +129,6 @@
 </div>
 
 <div class="container">
-    <h3 class="title">Bienvenue sur la communauté de Morlaix</h3>
     <div class="row">
         <div class="col-sm-3">
             <div class="list-group">
