Amélioration des pages

--- a/index.html
+++ b/index.html
@@ -533,4 +533,18 @@
         document.getElementById(idLirePlus).style.display = 'block';
     }
 </script>
+<style>
+    @media screen and (min-width: 576px) and (max-width: 777px) {
+        .mapdiv {
+            width: 25%;
+            margin-left: -40%;
+        }
+    }
+    @media screen and (min-width: 777px) and (max-width: 990px) {
+        .mapdiv {
+            width: 25%;
+            margin-left: -20%;
+        }
+    }
+</style>
 </html>
