Amélioration des pages HTML

--- a/Page_en_construction.html
+++ b/Page_en_construction.html
@@ -59,7 +59,7 @@
 </header>
 
 <div class="erreur">
-  <h2>Désoler! La page est actuellement en construction <br> Elle sera terminé dans : </h2>
+  <h2>Désolé ! La page est actuellement en construction <br> Elle sera terminée dans : </h2>
   <div class="countdown_T">
     <div id="time">
       <div class="circle" style="--clr:#2abdea">
