--- a/erreur.html
+++ b/erreur.html
@@ -44,17 +44,12 @@
                             </li>
                         </ul>
                         <form class="d-flex" role="search">
-                            <!--<input class="form-control me-2" type="search" placeholder="Rechercher" aria-label="Search">
-                            <button class="btn btn-outline-success bg-white text-black" type="submit">OK</button>
-                            <input type="search" id="search" value="" onchange="ouvrirPage()">
-                            <input type="button" id="button" onclick="ouvrirPage()" value="Chercher">
-                  -->
 
                             <input class="form-control me-2" type="search" id="search" placeholder="Rechercher"
                                    onchange="ouvrirPage()" aria-label="Search">
 
                             <input class="btn btn-outline-success bg-white text-black" type="button" id="button"
-                                   onclick="ouvrirPage()" value="Chercher">
+                                   onclick="ouvrirPage()" value="OK">
 
                         </form>
                     </div>
@@ -63,7 +58,7 @@
         </header>
 
         <div class="erreur">
-            <h2>Oops! La page n'a pas été trouvé</h2>
+            <h2>Oops! La page n'a pas été trouvée</h2>
             <h1>404</h1>
             <a href="index.html">Retourner à la page d'Accueil</a>
         </div>
