Amélioration des pages HTML

--- a/Ltouristique.html
+++ b/Ltouristique.html
@@ -45,15 +45,12 @@
                         <a class="nav-link text-white" href="Page_en_construction.html">Les équipements</a>
                     </li>
                 </ul>
+
                 <form class="d-flex" role="search">
-
-                    <input class="form-control me-2" type="search" id="search" placeholder="Rechercher"
-                           onchange="ouvrirPage()" aria-label="Search">
-
-                    <input class="btn btn-outline-success bg-white text-black" type="button" id="button"
-                           onclick="ouvrirPage()" value="OK">
-
+                    <input class="form-control me-2" type="search" id="search" placeholder="Rechercher" onchange="ouvrirPage()" aria-label="Search">
+                    <input class="btn btn-outline-success bg-white text-black" type="button" id="button" onclick="ouvrirPage()" value="OK">
                 </form>
+
             </div>
         </div>
     </nav>
@@ -116,13 +113,12 @@
             </div>
         </div>
     </div>
-
 </div>
+
 <div class="container">
     <h3 class="title">Explorez Nos Lieux Touristiques</h3>
     <p class="ecriture">Sites historiques</p>
     <div class="cardtst">
-
 
         <a href="https://fr.wikipedia.org/wiki/Viaduc_de_Morlaix" target="_blank" class="cardt">
             <div class="cardt-background" style="background-image: url(https://files.structurae.net/files/photos/618/morlaix2.jpg)"></div>
@@ -188,9 +184,8 @@
                 <h3>Rive de la Penzé</h3>
             </div>
         </a>
-
-
     </div>
+
     <p class="ecriture">Trésors Marins</p>
     <div class="cardtst">
         <a href="https://www.tourismebretagne.com/destinations/les-10-destinations/brest-terres-oceanes/les-abers-et-la-route-des-phares/" target="_blank" class="cardt">
@@ -236,7 +231,6 @@
         crossorigin="anonymous"></script>
 </body>
 
-<!--Damien : Footer-->
 <div class="Toutfooter">
     <footer class="footer">
         <div class="waves">
