--- a/Page_en_construction.html
+++ b/Page_en_construction.html
@@ -31,16 +31,16 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav text-center">
           <li class="nav-item">
-            <a class="nav-link text-white" href="#">La Communauté</a>
+            <a class="nav-link text-white" href="Page_en_construction.html">La Communauté</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="#">Domaines d'actions</a>
+            <a class="nav-link text-white" href="Page_en_construction.html">Domaines d'actions</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="#">Les grands projets</a>
+            <a class="nav-link text-white" href="Page_en_construction.html">Les grands projets</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="#">Les équipements</a>
+            <a class="nav-link text-white" href="Page_en_construction.html">Les équipements</a>
           </li>
         </ul>
         <form class="d-flex" role="search">
