--- a/commune.html
+++ b/commune.html
@@ -20,10 +20,6 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/Contcart.css"/>
-  <!--  <link rel="stylesheet" href="css/carousell.css">-->
-    <!--<link rel="stylesheet" href="css/carte.css">-->
-    <!--<link rel="stylesheet" href="css/popup.css">-->
-    <!--<link rel="stylesheet" href="css/Map.css">-->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
           integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
           crossorigin=""/>
@@ -81,19 +77,9 @@
     <video width="1600" height="1020" controls autoplay="autoplay" muted="" loop="loop">
         <source src="vidéo/MORLAIX_Bretagne.mp4" type=video/mp4>
     </video>
-
-    <!--<h1> <span class="ityped"></span></h1>
-    <script type="text/javascript" src="js/app.js"></script>
-    <script type="text/javascript">
-        window.ityped.init(document.querySelector('.ityped'),{
-            strings :['Bienvenue','Sur La Commune','De Plougonven'],
-            loop : true
-        })
-    </script>-->
 </div>
 
 <div class="container mt-4 space-after ">
-    <!-- ne pas oublier de mettre les lien sur les cards ici !!-->
     <div class="row">
         <div class="col-md-6 col-lg-4 col-xl-2">
             <div class="card-style">
@@ -144,20 +130,11 @@
             </div>
         </div>
     </div>
-    <!--<h1> <span class="ityped"></span></h1>
-    <script type="text/javascript" src="js/app.js"></script>
-    <script type="text/javascript">
-        window.ityped.init(document.querySelector('.ityped'),{
-            strings :['Bienvenue','Sur La Commune','De Plougonven'],
-            loop : true
-        })
-    </script>-->
-
 </div>
+
 <div class="row">
     <div class="heading">
-        <h3 data-text="Plougonven">
-            Plougonven</h3>
+        <h3 data-text="Plougonven">Plougonven</h3>
     </div>
 </div>
 
@@ -728,7 +705,6 @@
 </div>
 </body>
 
-<!--Damien : Footer-->
 <div class="Toutfooter">
     <footer class="footer">
         <div class="waves">
