--- a/commune.html
+++ b/commune.html
@@ -132,13 +132,9 @@
     </div>
 </div>
 
-<div class="row">
-    <div class="heading">
-        <h3 data-text="Plougonven">Plougonven</h3>
-    </div>
-</div>
-
+<h3 class="title">Plougonven</h3>
 <div class="container">
+
     <div class="row">
         <div class="col-sm-9">
             <div>
