--- a/Ltouristique.html
+++ b/Ltouristique.html
@@ -10,8 +10,8 @@
     <title>Lieux Touristiques</title>
     <link rel="Icon" href="image/logo_morlaix-coupe.png"/>
     <script type="text/javascript" src="js/bootstrap.js"></script>
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/bootstrap.css">
+    <link rel="stylesheet" href="/css/style.css">
     <script rel="text/javascript" src="js/btn.js" defer></script>
 </head>
 
@@ -23,7 +23,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-green">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img class="logo" src="image/logo_morlaix-coupe.png" alt="Logo de la communauté">
+                <img class="logo" src="/image/logo_morlaix-coupe.png" alt="Logo de la communauté">
                 <span class="text-white ml-2">Morlaix Communauté</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -99,7 +99,7 @@
         <div class="col-md-6 col-lg-4 col-xl-2">
             <div class="card-style">
                 <a href="Page_en_construction.html" class="card-link">
-                    <img src="image/icones/Travaux.png" class="logo-card" alt="Logo Travaux">
+                    <img src="/image/icones/Travaux.png" class="logo-card" alt="Logo Travaux">
                     <p class="font-weight-bold">TRAVAUX</p>
                 </a>
             </div>
@@ -107,7 +107,7 @@
         <div class="col-md-6 col-lg-4 col-xl-2">
             <div class="card-style">
                 <a href="Ltouristique.html" class="card-link" target="_blank">
-                    <img src="image/icones/carte.png" class="logo-card" alt="Logo Sport">
+                    <img src="/image/icones/carte.png" class="logo-card" alt="Logo Sport">
                     <p class="font-weight-bold">LIEUX TOURISTIQUES</p>
                 </a>
             </div>
@@ -116,7 +116,7 @@
 </div>
 
 <div class="container">
-    <h3 class="title">Explorez Nos Lieux Touristiques</h3>
+   <!-- <h3 class="title">Explorez Nos Lieux Touristiques</h3>-->
     <p class="ecriture">Sites historiques</p>
     <div class="cardtst">
 
@@ -223,6 +223,12 @@
     </div>
 
 
+</div>
+<div class="row">
+    <div class="heading">
+        <h3 data-text="Lieux-Touristiques">
+            Lieux-Touristiques</h3>
+    </div>
 </div>
 
 
