--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
     <h3 class="title"> Communauté de Morlaix </h3>
     <div class="row">
         <div class="col-sm-3">
+            <p class="ecriture-petit-titre"></p>
             <div class="list-group">
                 <a href="Page_en_construction.html" class="list-group-item list-group-item-action active" aria-current="true">Actualités</a>
                 <a href="Page_en_construction.html" class="list-group-item list-group-item-action">Habiter</a>
@@ -136,7 +137,7 @@
         </div>
 
         <div class="col-sm-6">
-           <!-- <p class="ecriture-petit-titre"></p>-->
+            <p class="ecriture-petit-titre"></p>
             <div id="carouselExample" class="carousel slide">
                 <div class="carousel-inner">
 
@@ -411,7 +412,7 @@
         </div>
 
         <div class="col-sm-3" id="agenda">
-
+            <p class="ecriture-petit-titre"></p>
             <div class="row">
                 <h2>Agenda</h2>
             </div>
