--- a/Ltouristique.html
+++ b/Ltouristique.html
@@ -116,7 +116,7 @@
 </div>
 
 <div class="container">
-   <!-- <h3 class="title">Explorez Nos Lieux Touristiques</h3>-->
+    <h3 class="title">Explorez Nos Lieux Touristiques</h3>
     <p class="ecriture">Sites historiques</p>
     <div class="cardtst">
 
